
Mixer
-----

  o Fixed bug in the contrast/saturation/brightness code where the wrong luma
    coefficients was used.
  o Rewrote the chroma key code to support variable hue, instead of fixed green
    or blue. Threshold setting was removed in favour of separate hue width,
    minimum saturation and minimum brightness constraints.

AMCP
----

  o INFO PATHS now adds all the path elements even if they are using the default
    values.
  o MIXER CHROMA syntax deprecated (still supported) in favour of the more
    advanced syntax required by the rewritten chroma key code.
  o Added special command REQ that can be prepended before any command to
    identify the response with a client specified request id, allowing a client
    to know exactly what asynchronous response matched a specific request.
  o Added support for listing contents of a specific directory for CLS, TLS,
    DATA LIST and THUMBNAIL LIST.
  o Fixed bug where CINF only returned the first match.



CasparCG 2.1.0 Beta 1 (w.r.t 2.0.7 Stable)
==========================================

General
-------

  o 64 bit!
  o Linux support!
    + Moved to CMake build system for better platform independence.
      + Contributions before build system switch (not w.r.t 2.0.7 Stable):
        + gitrev.bat adaptions for 2.1 (Thomas Kaltz III).
    + Thanks to our already heavy use of the pimpl idiom, abstracting platform
      specifics was easily done by having different versions of the .cpp files
      included in the build depending on target platform. No #ifdef necessary,
      except for in header only platform specific code.
    + Flash, Bluefish and NewTek modules are not ported to the Linux build.
    + Contributions during development (not w.r.t 2.0.7 Stable):
      + Fixed compilation problems in Linux build (Dimitry Ishenko).
      + Fixed compilation problem in GCC 5 (Krzysztof Pyrkosz).
      + Fixed thumbnail image saving on Linux (Krzysztof Pyrkosz).